tests/base/valid/Coercion_Valid_4.whiley
{int->real} f([real] x):
    return x

void System::main([string] args):
    out.println(str(f([1.2,2.3])))